# GISAID_Fasta_Extractor

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: main.cpp
